--- a/.classpath
+++ b/.classpath
@@ -8,5 +8,6 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/pasa_cbentley_core_src8"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/pasa_cbentley_swing"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/pasa_jtattoo"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/JFormDesigner_FlatLaf"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
