--- a/.classpath
+++ b/.classpath
@@ -9,5 +9,6 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/pasa_cbentley_swing"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/pasa_jtattoo"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/JFormDesigner_FlatLaf"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/pasa_cbentley_core_j2se"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
